--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
+    "cloudinary": "^1.25.1",
     "ejs": "^3.1.3",
     "express": "^4.17.1",
     "express-formidable": "^1.2.0",
@@ -19,7 +20,7 @@
     "http": "0.0.1-security",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.5.9",
-    "socket.io": "^2.3.0",
+    "socket.io": "^2.4.1",
     "unirest": "^0.6.0"
   },
   "devDependencies": {},
